feat(scores): add `configId`, `dataType` and `stringValue` via SDK
